Better error handling in the rare case that EPSS service returns an error (happened for scores for date 2024-12-01 for some reason)