@@ -5,7 +5,6 @@ plugins {
 	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.5'
 	id 'maven-publish'
-	id 'org.graalvm.buildtools.native' version '0.10.2'
 }
 
 group = 'com.fujitsu.edgewareroad'
@@ -38,11 +37,6 @@ sourceSets {
                         srcDirs= ["src/test/resources"]
                 }
         }
-		graal {
-                java {
-                        srcDirs= ["graalsrc/main/java"]
-                }
-		}
 }
 
 java {
@@ -66,7 +60,6 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
-    nativeImageClasspath.extendsFrom(graalImplementation)
 }
 
 dependencies {
@@ -85,10 +78,6 @@ dependencies {
 	implementation 'org.apache.commons:commons-lang3:3.14.0'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-    graalCompileOnly 'org.graalvm.nativeimage:svm:21.2.0'
-    graalCompileOnly 'org.graalvm.sdk:graal-sdk:21.2.0'
-    nativeImageCompileOnly sourceSets.graal.output.classesDirs
 }
 
 jar {
@@ -115,63 +104,9 @@ testing {
 	suites {
 		test {
 			useJUnitJupiter()
-			targets.all {
-				testTask.configure {
-					jvmArgs('-agentlib:native-image-agent=config-output-dir=build/main/generated-META-INF/native-image')
-				}
-			}
 		}
 	}
 }
-
-graalvmNative {
-    binaries {
-        main {
-			// Main options
-			imageName = 'trivysummary'
-			mainClass = 'com.fujitsu.edgewareroad.trivysummary.TrivySummaryApp'
-            // Advanced options
-			buildArgs.add("-O4")
-    	    configurationFileDirectories.from(file('build/main/generated-META-INF/native-image'), file('src/main/resources/META-INF/native-image')) // Adds a native image configuration file directory, containing files like reflection configuration
-        }
-		test {
-            debug = true // Determines if debug info should be generated, defaults to false (alternatively add --debug-native to the CLI)
-			buildArgs.add("-O0")
-	        configurationFileDirectories.from(file('build/main/generated-META-INF/native-image'), file('src/main/resources/META-INF/native-image'), file('src/test/resources/META-INF/native-image')) // Adds a native image configuration file directory, containing files like reflection configuration
-		}
-	}
-	binaries.all {
-		verbose = true // Add verbose output, defaults to false
-		fallback = true // Sets the fallback mode of native-image, defaults to false
-		sharedLibrary = false // Determines if image is a shared library, defaults to false if `java-library` plugin isn't included
-		quickBuild = false // Determines if image is being built in quick build mode (alternatively use GRAALVM_QUICK_BUILD environment variable, or add --native-quick-build to the CLI)
-		richOutput = true // Determines if native-image building should be done with rich output
-
-		buildArgs.add("--verbose")
-		buildArgs.add("-H:+AddAllCharsets")
-		buildArgs.add("--add-exports=java.desktop/sun.awt=ALL-UNNAMED")
-
-		runtimeArgs.add('-Djava.home=' + javaHome)	// Gets around an AWT issue where it needs the java home property set, even if it's rubbish
-	}
-}
-
-nativeCompile.dependsOn(test)
-nativeTestCompile.dependsOn(test)
-
-task copyFontsToNativeCompile(dependsOn: nativeCompile, type: Copy) {
-	from javaHome + '/lib'
-	into "build/native/nativeCompile/lib"
-	include "*font*"
-}
-
-task copyFontsToNativeTestCompile(dependsOn: nativeTestCompile, type: Copy) {
-	from javaHome + '/lib'
-	into "build/native/nativeTestCompile/lib"
-	include "*font*"
-}
-
-nativeCompile.finalizedBy(copyFontsToNativeCompile)
-nativeTestCompile.finalizedBy(copyFontsToNativeTestCompile)
 
 // Publishing the output to GitHub (standard JAR, sources plus POM file, distribution ZIP)
 publishing {
